--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="h-outline"></div>
+    </header>
     <main>
-        
+        <!-- <div class="bio">
+            <h1>
+                hey,
+                <br/>
+                i'm josh
+            </h1>
+        </div> -->
     </main>
-    <footer></footer>
+    <footer>
+        <div class="f-outline"></div>
+    </footer>
 </body>
 </html>
